@startuml
left to right direction
skin rose
skinparam backgroundcolor AntiqueWhite/Gold
skinparam classBackgroundColor Wheat|CornflowerBlue

class Socio{
    Nombre
    Apellido
    CorreoElectronico
    numeroDeSocio
    contraseña
    Lista de libros prestados
}

class Libro {
    ISBN
    Título
    Autor
    Categoria
    Sumador de Calificaciones
    Contador de Calificaciones
    Promedio de Calificaciones
    Disponibilidad
}

class Sistema{
    Lista de socios
    Lista de libros
    Socio
}

entity Prestamo{
    ISBN
    Copias disponibles
}

entity Editar{
    Nombre
    Apellido
    Correo electronico
}

entity Calificar{
    ISBN
    Promedio de Calificacion
}

Sistema "1" o-up-> "1..*" Socio : Contiene >
Sistema "1" o-down-> "1..*" Libro : Contiene >
Sistema "1" -up-> "1..*" Prestamo : Permite >
note "Solo puede si es que está logeado" as N3
Prestamo .up. N3
N3 .. Socio
Socio "1..*" o-> "1..*" Prestamo : Solicita >
note "Solo puede si es que está logeado" as N1
Editar .down. N1
N1 .down. Socio
Sistema "1..*" -- "1..*" Editar : Permite >
Socio "1..*" -up- "1..*" Editar : Permite >
Libro "1" -right- "1" Calificar : Recibe <
note "Solo puede si es que está logeado" as N2
Calificar .down. N2
N2 .down. Socio
Socio "1" -- "1" Calificar : Genera >

@enduml